// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 should allow weight to be overridden 1`] = `
.emotion-1 {
  display: block;
  vertical-align: bottom;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  text-align: unset;
  text-decoration: inherit;
  font-weight: 500;
  font-size: 24px;
  color: rgb(55,69,97);
}

.emotion-1:hover {
  text-decoration: inherit;
}

.emotion-1 strong {
  font-weight: 500;
}

<h1
  className="root emotion-0 emotion-1"
  color="navy700"
  onClick={undefined}
  size="extra-large"
  style={Object {}}
>
  An H1 Tag
</h1>
`;

exports[`H1 should render shallow component ok 1`] = `
.emotion-1 {
  display: block;
  vertical-align: bottom;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  text-align: unset;
  text-decoration: inherit;
  font-weight: 400;
  font-size: 24px;
  color: rgb(55,69,97);
}

.emotion-1:hover {
  text-decoration: inherit;
}

.emotion-1 strong {
  font-weight: 500;
}

<h1
  className="root emotion-0 emotion-1"
  color="navy700"
  onClick={undefined}
  size="extra-large"
  style={Object {}}
>
  An H1 Tag
</h1>
`;
